@@ -601,6 +601,14 @@ class Window (object):
         """
         return lambda: self.trans(x, y)
     
+    def get_boundary(self):
+        """sets the maximum region viewable"""
+        return summon_core.get_window_boundary(self.winid)
+    
+    def set_boundary(self, x1, y1, x2, y2):
+        """sets the maximum region viewable"""
+        return summon_core.set_window_boundary(self.winid, x1, y1, x2, y2)
+    
     def home(self):
         """centers the view such that all graphical elements are visible"""
         #ret = summon_core.home(self.winid)
