@@ -101,6 +101,8 @@ void summonCommandsInit()
     RegisterScriptCommand(GetWindowPositionCommand) v()          
     RegisterScriptCommand(SetWindowSizeCommand)     v() gl()
     RegisterScriptCommand(GetWindowSizeCommand)     v()
+    RegisterScriptCommand(SetWindowBoundaryCommand) v() gl()
+    RegisterScriptCommand(GetWindowBoundaryCommand) v()    
     RegisterScriptCommand(RaiseWindowCommand)       v() gl()
     RegisterScriptCommand(SetTransCommand)          v() gl()
     RegisterScriptCommand(GetTransCommand)          v()
